# stipulate

./: README.md  pyproject.toml
docs/: SPEC.md
examples/: README.md  minesweeper_demo.py  order_demo.py
examples/minesweeper_project/: README.md  pyproject.mutate.toml  pyproject.toml
examples/minesweeper_project/minesweeper/: actions.py  actions_fixed.py  db.py  invariants.py  models.py  seeds.py  transitions.py
stipulate/: __init__.py  __main__.py  cli.py  config.py  drift.py
stipulate/core/: __init__.py  action.py  drift.py  external.py  invariant.py  result.py  schema.py  schema_check.py  seed.py  transitions.py  utils.py
stipulate/explore/: __init__.py  boundary.py  coverage.py  engine.py  sequence.py
stipulate/integrations/: __init__.py  api.py  hypothesis.py  schemathesis.py
stipulate/mutate/: __init__.py  operators.py  report.py  runner.py
stipulate/pytest/: __init__.py
stipulate/report/: __init__.py  console.py  json.py
tests/: test_future_slices.py  test_minesweeper_demo.py
