[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stipulate"
version = "0.1.0"
description = "Executable backend invariants and state-transition exploration for SQLModel apps."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0",
    "hypothesis>=6.108",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "schemathesis>=4.0",
]
test = [
    "pytest>=8.0",
]

[project.scripts]
stipulate = "stipulate.cli:main"

[tool.setuptools.packages.find]
include = ["stipulate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
